tests/errors/array_inferred_push.orus
fn main() {
    let arr = [1, 2, 3]
    push(arr, 4)
}
